--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,5 +34,5 @@ controlled by radiogenic decay from HPEs, rather than episodic advective heating
   pages={0-28},
   year={2025},
   doi={10.1111/jmg.70007},
-  preview=(preview_paper_1.png),
+  preview=(preview_paper_1.png)
 }
