--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
   bibtex_show={true},
   abbr={Article},
   title={Confronting Episodic vs. Continuous Heat Sources in Long- Lived Hot Orogens: Insights From Petrochronological Studies in the Nova Venecia Complex, Araçuaí Orogen (SE Brazil)},
-  author={Schiavetti L.R.},
+  author={Schiavetti L.R., Meira, V.T., Mulcahy, S., Vervoort, J.D., Baker, P.L., Luvizotto, G.L., Trindate, R.F.I.},
   abstract={Orogenic belts that sustain elevated temperatures at intermediate crustal depths for tens of millions of years are known as hot 
 orogens. The evolution of these hot orogens is largely influenced by thermal maturation, primarily driven by the distribution of 
 heat- producing elements (HPEs), such as K, Th and U in the overthickened crust. This process involves widespread anatexis, 
@@ -34,5 +34,5 @@ controlled by radiogenic decay from HPEs, rather than episodic advective heating
   pages={0-28},
   year={2025},
   doi={10.1111/jmg.70007},
-  preview={wave-mechanics.gif}
+  preview={preview_paper_1.png}
 }
