--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,26 +8,26 @@
   bibtex_show={true},
   abbr={Article},
   title={Confronting Episodic vs. Continuous Heat Sources in Long- Lived Hot Orogens: Insights From Petrochronological Studies in the Nova Venecia Complex, Araçuaí Orogen (SE Brazil)},
-  author={Schiavetti L.R., Meira, V.T., Mulcahy, S., Vervoort, J.D., Baker, P.L., Luvizotto, G.L., Trindate, R.F.I.},
+  author={Schiavetti L.R.},
   abstract={Orogenic belts that sustain elevated temperatures at intermediate crustal depths for tens of millions of years are known as hot 
-orogens. The evolution of these hot orogens is largely influenced by thermal maturation, primarily driven by the distribution of 
-heat- producing elements (HPEs), such as K, Th and U in the overthickened crust. This process involves widespread anatexis, 
-granulite facies metamorphism, extensive transfer of fluids and magma and large- scale crustal flow. Although most of the ther
-mal evolution of hot orogens is controlled by HPEs, episodic heat transfer may also contribute to their geodynamic development. 
-The Araçuaí orogen, located in southeastern Brazil, represents a Neoproterozoic hot orogen that exposes in its internal domain 
-deeper levels of an overthickened crust, resembling the Tibetan plateau. Its evolution involves more than 120 million years 
-of magmatism and metamorphism, including ultra- high- temperature metamorphism. Different geodynamic models have been 
-suggested to explain the thermal evolution of this orogen, ranging from episodic heat sources within subduction- collisional 
-orogeny to continuous long- lived heat sources in collisional or intracontinental settings. In this paper, we integrate detailed ther
-modynamic modelling, Lu–Hf and Sm–Nd garnet dating, and U–Pb and REE zircon data from an outcrop that includes granulite 
-facies metasedimentary rocks (Nova Venecia complex) and an intrusive gabbroic stock (São Gabriel pluton). This key outcrop 
-allows us to investigate the history of high- grade regional metamorphism within the internal domain of the Araçuaí orogen, as 
-well as the thermal impact of the late- stage high- temperature magmatism on the later evolution of this hot orogen. Our data indi
-cate that the studied rocks reached near- peak conditions (6.5–10 kbar and ~800°C) at 535–530 Ma and followed a near- isothermal 
-decompression path to 5–6 kbar at ~530–520 Ma. Only local effects of contact metamorphism (~5 kbar and 900°C–1000°C) were 
-observed along the contact between the gabbroic stock and its host rock. Based on this newly integrated dataset and the com
-pilation of existing information, we argue that the Araçuaí orogen evolved from a single, continuous, long- lived heat source 
-controlled by radiogenic decay from HPEs, rather than episodic advective heating from subduction/collision- related processes.},
+            orogens. The evolution of these hot orogens is largely influenced by thermal maturation, primarily driven by the distribution of 
+            heat- producing elements (HPEs), such as K, Th and U in the overthickened crust. This process involves widespread anatexis, 
+            granulite facies metamorphism, extensive transfer of fluids and magma and large- scale crustal flow. Although most of the ther
+            mal evolution of hot orogens is controlled by HPEs, episodic heat transfer may also contribute to their geodynamic development. 
+            The Araçuaí orogen, located in southeastern Brazil, represents a Neoproterozoic hot orogen that exposes in its internal domain 
+            deeper levels of an overthickened crust, resembling the Tibetan plateau. Its evolution involves more than 120 million years 
+            of magmatism and metamorphism, including ultra- high- temperature metamorphism. Different geodynamic models have been 
+            suggested to explain the thermal evolution of this orogen, ranging from episodic heat sources within subduction- collisional 
+            orogeny to continuous long- lived heat sources in collisional or intracontinental settings. In this paper, we integrate detailed ther
+            modynamic modelling, Lu–Hf and Sm–Nd garnet dating, and U–Pb and REE zircon data from an outcrop that includes granulite 
+            facies metasedimentary rocks (Nova Venecia complex) and an intrusive gabbroic stock (São Gabriel pluton). This key outcrop 
+            allows us to investigate the history of high- grade regional metamorphism within the internal domain of the Araçuaí orogen, as 
+            well as the thermal impact of the late- stage high- temperature magmatism on the later evolution of this hot orogen. Our data indi
+            cate that the studied rocks reached near- peak conditions (6.5–10 kbar and ~800°C) at 535–530 Ma and followed a near- isothermal 
+            decompression path to 5–6 kbar at ~530–520 Ma. Only local effects of contact metamorphism (~5 kbar and 900°C–1000°C) were 
+            observed along the contact between the gabbroic stock and its host rock. Based on this newly integrated dataset and the com
+            pilation of existing information, we argue that the Araçuaí orogen evolved from a single, continuous, long- lived heat source 
+            controlled by radiogenic decay from HPEs, rather than episodic advective heating from subduction/collision- related processes.},
   journal={Journal of Metamorphic Geology},
   volume={0},
   number={0},
