--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
   bibtex_show={true},
   abbr={Article},
   title={Confronting Episodic vs. Continuous Heat Sources in Long- Lived Hot Orogens: Insights From Petrochronological Studies in the Nova Venecia Complex, Araçuaí Orogen (SE Brazil)},
-  author={Schiavetti, L.R. and Meira, V.T. and Mulcahy, S.},
+  author={Schiavetti, L.R. and Meira, V.T. and Mulcahy, S. and Vervoort, J.D. and Baker, P.L. and Luvizotto, G.L. and Trindade, R.I.F.},
   abstract={Orogenic belts that sustain elevated temperatures at intermediate crustal depths for tens of millions of years are known as hot 
             orogens. The evolution of these hot orogens is largely influenced by thermal maturation, primarily driven by the distribution of 
             heat- producing elements (HPEs), such as K, Th and U in the overthickened crust. This process involves widespread anatexis, 
