--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,3 +36,24 @@
   doi={10.1111/jmg.70007},
   preview={preview_paper_1.png}
 }
+
+
+@Article{einstein1905photoelectriceffect,
+  bibtex_show={true},
+  abbr={Congress Work},
+  title={Estimativas P-T e geocronologia de processes anatéticos em orógenos quentes - o caso do Complexo Nova Venécia, Orógeno Araçuaí (SE Brazil)},
+  author={Schiavetti, L.R. and Meira, V.T. and Mulcahy, S. and Trindade, R.I.F.},
+  journal={XVII Simpósio Nacional de Estudos Tectônicos},
+  year={2019},
+  preview={preview_paper_1.png}
+}
+
+@Article{einstein1905photoelectriceffect,
+  bibtex_show={true},
+  abbr={Congress Work},
+  title={Petrogênese de migmatitos e rochas associadas do Complexo Costeiro na região de São Sebastião, litoral Norte do Estado de São Paulo},
+  author={Schiavetti, L.R. and Meira, V.T. and Mulcahy, S. and Trindade, R.I.F.},
+  journal={48 Congresso Brasileiro de Geologia},
+  year={2016},
+  preview={preview_paper_1.png}
+}
