--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,7 +34,8 @@
   pages={0-28},
   year={2025},
   doi={10.1111/jmg.70007},
-  preview={preview_paper_1.png}
+  preview={preview_paper_1.png},
+  pdf={paper_1.pdf}
 }
 
 
@@ -45,7 +46,8 @@
   author={Schiavetti, L.R. and Meira, V.T. and Mulcahy, S. and Trindade, R.I.F.},
   journal={XVII Simpósio Nacional de Estudos Tectônicos},
   year={2019},
-  preview={poster_snet_preview.png}
+  preview={poster_snet_preview.png},
+  pdf={poster_snet.pdf}
 }
 
 @Article{einstein1905photoelectriceffect,
