--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -52,6 +52,18 @@
 
 @Article{einstein1905photoelectriceffect,
   bibtex_show={true},
+  abbr={Talk},
+  title={Hot Orogens: The Neoproterozoic Araçuaí Orogen case study, SE Brazil},
+  author={Schiavetti, L.R.},
+  journal={Talk @ Western Washington University},
+  year={2018},
+  preview={},
+  pdf={talk_wwu.pdf},
+  preview={talk_wwu.png}
+}
+
+@Article{einstein1905photoelectriceffect,
+  bibtex_show={true},
   abbr={Poster},
   title={Petrogênese de migmatitos e rochas associadas do Complexo Costeiro na região de São Sebastião, litoral Norte do Estado de São Paulo},
   author={Schiavetti, L.R. and Meira, V.T. and Mulcahy, S. and Trindade, R.I.F.},
